[tool.poetry]
name = "dash-extensions"
version = "1.0.4+deps"
description = "Extensions for Plotly Dash."
authors = ["emher <emil.h.eriksen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://dash-extensions.com"
repository = "https://github.com/thedirtyfew/dash-extensions"
include = [
    "dash_extensions/*.py",
    "dash_extensions/dash_extensions.min.js",
    "dash_extensions/dash_extensions.min.js.map",
    "dash_extensions/async-lottie.js",
    "dash_extensions/async-lottie.js.map",
    "dash_extensions/async-mermaid.js",
    "dash_extensions/async-mermaid.js.map",
    "dash_extensions/metadata.json",
    "dash_extensions/package-info.json",
    "README.md",
    "LICENSE",
    "package.json"
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
dash = ">=2.9.3"
more-itertools = ">=8.0.0"
jsbeautifier = "^1.14.9"
Flask-Caching = ">=2.0.2"
dash-mantine-components = {version = ">=0.11.1", optional = true}
dataclass-wizard = "^0.22.2"

[tool.poetry.extras]
mantine = ["dash-mantine-components"]

[tool.poetry.dev-dependencies]
dash = {extras = ["dev", "testing"], version = ">=2.9.3"}
pytest-cov = "^4.1.0"
black = "^23.10.1"
pandas = ">=1.5.3"
quart = "^0.19.3"
starlette = "^0.31.1"
requests = "^2.31.0"
certifi = "^2023.07.22"
uvicorn = "^0.23.2"
sse-starlette = "^1.6.5"
urllib3 = "<2.0.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
